Fixing text-size on mobile of about us

--- a/aboutus/aboutus.css
+++ b/aboutus/aboutus.css
@@ -71,7 +71,7 @@ nav{
         padding-top: 10%;
     }
     .top-half > h4{
-        font-size: 2.25vh !important;
+        font-size: 2.15vh !important;
     }
 }
 
